Fix p spacing in about text

--- a/freesound/static/bw-frontend/styles/pages/profile.scss
+++ b/freesound/static/bw-frontend/styles/pages/profile.scss
@@ -12,11 +12,6 @@
 
   &__description {
     width: 100%;
-
-    p {
-      margin-top: 0;
-      margin-bottom: 5px;
-    }
   }
 
   &__stats {
